[gd_scene load_steps=9 format=2]

[ext_resource path="res://Border.tscn" type="PackedScene" id=1]
[ext_resource path="res://Racket.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://HUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/hit_sound.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/win_sound.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.7025, 287.62 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Control" parent="." instance=ExtResource( 5 )]
anchor_bottom = 1.0
margin_bottom = 0.0

[node name="LeftPlayerScore" parent="Control" index="0"]
margin_left = 31.7303
margin_top = 23.0948
margin_right = 71.7303
margin_bottom = 37.0948

[node name="RightPlayerScore" parent="Control" index="1"]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 971.278
margin_top = 19.5282
margin_right = 1006.28
margin_bottom = 33.5282

[node name="TopBorder" parent="." groups=[
"Border",
] instance=ExtResource( 1 )]
position = Vector2( 2.32552, 1.44543 )

[node name="LeftBorder" parent="." instance=ExtResource( 1 )]
position = Vector2( 13.962, 15.6 )
rotation = 1.5708
scale = Vector2( 0.57, 1 )

[node name="BottomBorder" parent="." groups=[
"Border",
] instance=ExtResource( 1 )]
position = Vector2( 1.924, 586 )

[node name="RightBorder" parent="." instance=ExtResource( 1 )]
position = Vector2( 1025, 15.6 )
rotation = 1.5708
scale = Vector2( 0.57, 1 )

[node name="LeftRacket" parent="." groups=[
"Racket",
] instance=ExtResource( 2 )]
position = Vector2( 249.947, 172.261 )

[node name="RightRacket" parent="." groups=[
"Racket",
] instance=ExtResource( 2 )]
position = Vector2( 825.839, 200 )
rotation = -3.14159
enable = false

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 489.762, 118.218 )
speed = 750

[node name="LeftEnd" type="Area2D" parent="."]
position = Vector2( 231.783, 301.249 )
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftEnd"]
shape = SubResource( 1 )

[node name="RightEnd" type="Area2D" parent="."]
position = Vector2( 842.533, 301.249 )
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightEnd"]
shape = SubResource( 1 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 491.405, 121.296 )

[node name="StopTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 1.0

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 2.0
[connection signal="start" from="Control" to="." method="_on_Control_start"]
[connection signal="is_disabled" from="LeftRacket" to="." method="_on_LeftRacket_is_disabled"]
[connection signal="is_disabled" from="RightRacket" to="." method="_on_RightRacket_is_disabled"]
[connection signal="collision" from="Ball" to="." method="_on_Ball_collision"]
[connection signal="left_entering_in_end" from="Ball" to="." method="_on_Ball_left_entering_in_end"]
[connection signal="right_entering_in_end" from="Ball" to="." method="_on_Ball_right_entering_in_end"]
[connection signal="body_shape_entered" from="LeftEnd" to="Ball" method="_on_LeftEnd_body_shape_entered"]
[connection signal="body_shape_entered" from="RightEnd" to="Ball" method="_on_RightEnd_body_shape_entered"]
[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]

[editable path="Control"]
